web/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipa2025-msapp-web-service
  namespace: ipa2025
spec:
  selector:
    app: ipa2025-msapp-web
  ports:
    - port: 80
      targetPort: 80                       # ✅ ให้ตรงกับ containerPort ด้านบน
  type: ClusterIP
